--- a/showcase/app.json
+++ b/showcase/app.json
@@ -3,10 +3,11 @@
     "name": "Showcase",
     "slug": "showcase",
     "privacy": "public",
-    "sdkVersion": "32.0.0",
+    "sdkVersion": "35.0.0",
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "web"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
