--- a/showcase/package.json
+++ b/showcase/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
+    "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/native": "^5.0.1",
     "@react-navigation/stack": "^5.0.1",
     "expo": "~36.0.0",
