--- a/showcase/package.json
+++ b/showcase/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.0.1",
     "@react-navigation/stack": "^5.0.1",
     "expo": "~36.0.0",
+    "expo-asset": "~8.0.0",
     "expo-av": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
