Added pre-loading of assets/fonts, fixed #10

--- a/showcase/package.json
+++ b/showcase/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://scommons.org/scommons-react-native",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
