--- a/showcase/package.json
+++ b/showcase/package.json
@@ -17,6 +17,7 @@
     "expo-asset": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-av": "~8.0.0",
+    "expo-sqlite": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
