--- a/showcase/package.json
+++ b/showcase/package.json
@@ -9,29 +9,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.5",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/native": "^5.0.1",
     "@react-navigation/stack": "^5.0.1",
-    "expo": "~36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-av": "~8.0.0",
-    "expo-sqlite": "~8.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "expo": "^38.0.0",
+    "expo-asset": "~8.1.7",
+    "expo-font": "~8.2.1",
+    "expo-av": "~8.2.1",
+    "expo-sqlite": "~8.2.1",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "react-native-svg": "9.13.3",
+    "react-native-svg": "12.1.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.0.0",
+    "babel-preset-expo": "^8.2.3",
     "@babel/core": "^7.0.0"
   },
   "private": true
