--- a/showcase/package.json
+++ b/showcase/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "react-native-svg": "12.1.0",
+    "react-native-webview": "9.4.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
