--- a/showcase/package.json
+++ b/showcase/package.json
@@ -28,6 +28,7 @@
     "react-native-web": "~0.11.7",
     "react-native-svg": "12.1.0",
     "react-native-webview": "9.4.0",
+    "react-native-htmlview": "^0.16.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
