--- a/showcase/package.json
+++ b/showcase/package.json
@@ -15,20 +15,21 @@
     "@react-navigation/stack": "^5.0.1",
     "expo": "^38.0.0",
     "expo-asset": "~8.1.7",
-    "expo-font": "~8.2.1",
     "expo-av": "~8.2.1",
+    "expo-font": "~8.2.1",
     "expo-sqlite": "~8.2.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-htmlview": "^0.16.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
     "react-native-svg": "12.1.0",
+    "react-native-syntax-highlighter": "^2.1.0",
+    "react-native-web": "~0.11.7",
     "react-native-webview": "9.4.0",
-    "react-native-htmlview": "^0.16.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
