--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ branches:
   - master
   - /^v\d+\.\d+\.\d+$/
 before_install:
-- nvm install 10 &&
-  nvm use 10
-- node --version
+- nvm install 12 &&
+  nvm use 12
+- node --version &&
+  npm --version
 - npm install -g expo-cli
 - if [ $TRAVIS_PULL_REQUEST = 'false' ]; then
     openssl aes-256-cbc -K $encrypted_ecd940086dd2_key -iv $encrypted_ecd940086dd2_iv -in travis/secrets.tar.enc -out travis/secrets.tar -d;
@@ -27,8 +28,8 @@ before_install:
 script:
 - sbt clean coverage test coverageReport &&
   sbt coverageAggregate &&
-  sbt coveralls
-- if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "master" -o "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]; then
+  sbt coveralls &&
+  if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_BRANCH" == "master" -o "$TRAVIS_BRANCH" == "$TRAVIS_TAG" ]; then
     if [ -z "$TRAVIS_TAG" ]; then
        echo "Publish a snapshot";
        sbt clean publish;
@@ -41,7 +42,7 @@ script:
        expo publish --non-interactive;
     else
        echo "Publish a release version=$TRAVIS_TAG";
-       version=$TRAVIS_TAG sbt clean publishSigned sonatypeRelease;
+       version=$TRAVIS_TAG sbt clean publishSigned sonatypeBundleRelease;
     fi
   else
     echo "This is not a master branch commit. Skipping the publish/release step";
@@ -49,6 +50,7 @@ script:
 cache:
   directories:
   - ~/.npm
+  - ~/.nvm
   - "$HOME/.ivy2/cache"
   - "$HOME/.sbt"
 before_cache:
