Upgraded showcase app to Expo SDK 42, fixed #41

--- a/showcase/package.json
+++ b/showcase/package.json
@@ -2,6 +2,7 @@
   "homepage": "https://scommons.org/scommons-react-native",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -13,29 +14,31 @@
     "@react-navigation/bottom-tabs": "^5.2.6",
     "@react-navigation/native": "^5.0.1",
     "@react-navigation/stack": "^5.0.1",
-    "expo": "^38.0.0",
-    "expo-asset": "~8.1.7",
-    "expo-av": "~8.2.1",
-    "expo-font": "~8.2.1",
-    "expo-sqlite": "~8.2.1",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "expo": "^42.0.0",
+    "expo-asset": "~8.3.3",
+    "expo-av": "~9.2.3",
+    "expo-font": "~9.2.1",
+    "expo-sqlite": "~9.2.1",
+    "expo-splash-screen": "~0.11.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-htmlview": "^0.16.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-svg": "12.1.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-syntax-highlighter": "^2.1.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "11.0.0",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.6.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.2.3",
-    "@babel/core": "^7.0.0"
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0",
+    "patch-package": "^6.4.7"
   },
   "private": true
 }
