--- a/showcase/package.json
+++ b/showcase/package.json
@@ -11,33 +11,33 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "expo": "^43.0.0",
-    "expo-asset": "~8.4.3",
-    "expo-av": "~10.1.3",
-    "expo-font": "~10.0.3",
-    "expo-splash-screen": "~0.13.5",
-    "expo-sqlite": "~10.0.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-gesture-handler": "~1.10.2",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "expo": "^45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-av": "~11.2.3",
+    "expo-font": "~10.1.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-sqlite": "~10.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-htmlview": "^0.16.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-svg": "12.1.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-syntax-highlighter": "^2.1.0",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.13.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-redux": "^7.2.4",
     "redux": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "babel-preset-expo": "8.5.1",
+    "babel-preset-expo": "~9.1.0",
     "patch-package": "^6.4.7"
   },
   "private": true
