--- a/showcase/package.json
+++ b/showcase/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
     "expo-sqlite": "~10.2.0",
+    "expo-updates": "~0.13.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
