--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI
 
 on:
   push:
+    paths-ignore:
+      - '*.md'
     branches: [ master ]
     tags:
       - '*'
@@ -13,34 +15,34 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Git checkout
-      uses: actions/checkout@v2
+    - name: Git checkout (merge)
+      uses: actions/checkout@v3
+      if: github.event_name != 'pull_request'
       with:
         fetch-depth: 0
 
+    - name: Git checkout (PR)
+      uses: actions/checkout@v3
+      if: github.event_name == 'pull_request'
+      with:
+        fetch-depth: 0
+        # see: https://frontside.com/blog/2020-05-26-github-actions-pull_request/#how-does-pull_request-affect-actionscheckout
+        ref: ${{ github.event.pull_request.head.sha }}
+
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: '16'
 
     - name: Set up JDK 8
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '8'
         distribution: 'adopt'
-
-    - name: Cache sbt
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.sbt
-          ~/.ivy2/cache
-          ~/.coursier/cache/v1
-          ~/.cache/coursier/v1
-        key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt', 'project/**/*.scala') }}
+        cache: 'sbt'
 
     - name: Cache node_modules
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: |
           ~/.npm
@@ -63,9 +65,9 @@ jobs:
           ~/work/scommons-react-native/scommons-react-native/test/target/scala-2.13/scalajs-bundler/test/package-lock.json
           ~/work/scommons-react-native/scommons-react-native/ui/target/scala-2.13/scalajs-bundler/test/node_modules
           ~/work/scommons-react-native/scommons-react-native/ui/target/scala-2.13/scalajs-bundler/test/package-lock.json
-        key: ${{ runner.os }}-node_modules-cache-v2-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node_modules-cache-v3-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-node_modules-cache-v2-
+          ${{ runner.os }}-node_modules-cache-v3-
 
     - name: Extract Tag Name
       run: echo "TAG_NAME=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
@@ -73,7 +75,7 @@ jobs:
 
     - name: Run tests
       run: |
-        sbt -mem 2048 coverage test
+        sbt coverage test
         sbt coverageAggregate coveralls
       if: ${{ env.TAG_NAME == '' }}
       env:
@@ -83,7 +85,7 @@ jobs:
       run: |
         sbt clean publish
         echo "Publish to expo"
-        sbt -mem 2048 "project scommons-react-native-showcase" fullOptJS
+        sbt "project scommons-react-native-showcase" fullOptJS
         cd showcase
         npm install
         npm install expo-cli@5 --save-dev
