--- a/showcase/package.json
+++ b/showcase/package.json
@@ -11,35 +11,36 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
-    "expo": "^45.0.0",
-    "expo-asset": "~8.5.0",
-    "expo-av": "~11.2.3",
-    "expo-font": "~10.1.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-sqlite": "~10.2.0",
-    "expo-updates": "~0.13.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "deprecated-react-native-prop-types": "^2.3.0",
+    "expo": "^47.0.0",
+    "expo-asset": "~8.6.2",
+    "expo-av": "~13.0.1",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-sqlite": "~11.0.0",
+    "expo-updates": "~0.15.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-htmlview": "^0.16.0",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-syntax-highlighter": "^2.1.0",
-    "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.1",
     "react-redux": "^7.2.4",
     "redux": "^3.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-preset-expo": "~9.1.0",
+    "@babel/core": "^7.19.3",
+    "babel-preset-expo": "~9.2.1",
     "patch-package": "^6.4.7"
   },
   "private": true
